Kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kosmos-erp-api
  namespace: kosmos-demo
  labels:
    app: kosmos-erp-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kosmos-erp-api
  template:
    metadata:
      labels:
        app: kosmos-erp-api
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: api
        image: registry.gitlab.com/kosmitech-solutions/kosmos-erp/kosmos-erp-api:rc1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
      restartPolicy: Always
