Kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kosmos-erp-api-service
  namespace: kosmos-demo
  labels:
    app: kosmos-erp-api
spec:
  type: ClusterIP
  selector:
    app: kosmos-erp-api
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 80
    protocol: TCP
