Kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kosmos-erp-database-service
  namespace: kosmos-demo
  labels:
    app: kosmos-erp-database
spec:
  type: ClusterIP
  selector:
    app: kosmos-erp-database
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
