Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kosmos-erp-frontend-service
  namespace: kosmos-demo
  labels:
    app: kosmos-erp-frontend
spec:
  type: ClusterIP
  selector:
    app: kosmos-erp-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
