Kubernetes/superset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kosmos-erp-superset-service
  namespace: kosmos-demo
  labels:
    app: kosmos-erp-superset
spec:
  type: ClusterIP
  selector:
    app: kosmos-erp-superset
  ports:
  - name: http
    port: 8088
    targetPort: 8088
    protocol: TCP
