Kubernetes/superset-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kosmos-erp-superset-ingress
  namespace: kosmos-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - superset.demo.kosmosterp.com
    secretName: kosmos-erp-superset-tls
  rules:
  - host: superset.demo.kosmosterp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kosmos-erp-superset-service
            port:
              number: 80
